[gd_scene load_steps=5 format=3 uid="uid://hud_scene"]

[ext_resource type="Script" path="res://src/ui/hud/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_fill"]
bg_color = Color(0.9, 0.2, 0.2, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_health_bg"]
bg_color = Color(0.3, 0.1, 0.1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_fill"]
bg_color = Color(1, 0.85, 0.1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_stamina_bg"]
bg_color = Color(0.3, 0.25, 0.05, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 250.0
offset_bottom = 120.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Health"
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_health_fill")
theme_override_styles/background = SubResource("StyleBoxFlat_health_bg")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="StaminaLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Stamina"
theme_override_colors/font_color = Color(1, 0.9, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.5)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_stamina_fill")
theme_override_styles/background = SubResource("StyleBoxFlat_stamina_bg")
max_value = 100.0
value = 100.0
show_percentage = false

[node name="MiniMapContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 170.0
grow_horizontal = 0
stretch = true

[node name="SubViewport" type="SubViewport" parent="MiniMapContainer"]
transparent_bg = false
handle_input_locally = false
size = Vector2i(150, 150)
render_target_update_mode = 4

[node name="MiniMapCamera" type="Camera3D" parent="MiniMapContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 0, 1, 0, -1, 0, 0, 40, 0)
projection = 1
size = 60.0
far = 100.0
current = true
